# GithubReleaseWatcher

./: .dockerignore  .gitignore  Dockerfile  README.md  config.example.toml  config.toml  docker-compose.yml  pyproject.toml  real_state 2.json  watcher.py
.playwright-cli/: page-2026-03-01T10-50-36-476Z.yml  page-2026-03-01T10-50-42-479Z.yml  page-2026-03-01T10-50-43-273Z.yml  page-2026-03-01T10-50-48-684Z.yml  page-2026-03-01T10-50-51-775Z.yml  page-2026-03-01T10-50-54-199Z.yml  page-2026-03-01T10-50-56-175Z.yml  page-2026-03-01T10-50-57-373Z.yml  page-2026-03-01T10-51-00-701Z.yml  page-2026-03-01T10-51-01-357Z.yml  page-2026-03-02T02-23-59-259Z.yml  page-2026-03-02T02-24-01-471Z.yml  page-2026-03-02T02-24-29-882Z.yml  page-2026-03-02T02-25-12-942Z.yml  page-2026-03-02T02-25-19-530Z.yml  page-2026-03-02T02-25-23-140Z.yml  page-2026-03-02T02-59-06-011Z.yml  page-2026-03-02T02-59-22-941Z.yml  page-2026-03-02T03-02-15-965Z.yml  page-2026-03-02T03-02-39-706Z.yml  page-2026-03-02T03-23-34-833Z.yml  page-2026-03-02T03-41-54-309Z.yml  page-2026-03-02T04-32-02-516Z.yml  page-2026-03-02T04-34-20-145Z.yml  page-2026-03-02T04-35-52-659Z.yml  page-2026-03-02T04-41-13-642Z.yml  page-2026-03-02T04-42-12-962Z.yml  page-2026-03-02T04-43-17-162Z.yml  page-2026-03-02T05-58-03-084Z.yml  page-2026-03-02T05-58-17-164Z.yml  page-2026-03-02T05-58-37-425Z.yml  page-2026-03-02T05-58-52-762Z.yml  page-2026-03-02T05-58-58-633Z.yml  page-2026-03-02T05-59-16-185Z.yml  page-2026-03-02T05-59-22-938Z.yml  page-2026-03-02T06-00-20-259Z.yml  page-2026-03-02T06-00-31-567Z.yml  page-2026-03-02T06-00-42-469Z.yml  (+33 more)
frontend/: index.html  (+4 more)
(+167 files in other folders)
