[project]
name = "github-release-watcher"
version = "0.1.0"
description = "GitHub Release 监控与自动备份工具（基于 gruntwork-io/fetch 下载）"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["requests>=2.31.0"]

[project.scripts]
github-release-watcher = "github_release_watcher.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["github_release_watcher"]
