[project]
name = "github-release-watcher"
version = "0.1.0"
description = "GitHub Release 监控与自动备份工具（纯 Python 下载）"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "requests>=2.31.0",
  "fastapi>=0.110.0",
  "uvicorn>=0.30.0",
]

[project.scripts]
github-release-watcher = "github_release_watcher.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["github_release_watcher"]

[tool.setuptools.package-data]
github_release_watcher = ["static/*"]
